err/aspose-words-java-for-python.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aspose_words_java_for_python-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/loadingandsaving'...
Compiling './lib/python3.5/site-packages/loadingandsaving/__init__.py'...
***   File "./lib/python3.5/site-packages/loadingandsaving/__init__.py", line 25
    print nameOnly
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mailmergeandreporting'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/programmingwithdocuments'...
Compiling './lib/python3.5/site-packages/programmingwithdocuments/__init__.py'...
***   File "./lib/python3.5/site-packages/programmingwithdocuments/__init__.py", line 354
    print comment
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/quickstart'...
Compiling './lib/python3.5/site-packages/quickstart/__init__.py'...
***   File "./lib/python3.5/site-packages/quickstart/__init__.py", line 63
    print "Original document text: " + doc.getRange().getText()
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
